--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ input[type="submit"] {
   background-size: cover;
   background-color: black;
   width: 1136px;
-  height: 751px;
+  height: 753px;
   position: absolute;
   top: 0;
   left: 0;
@@ -98,4 +98,23 @@ input[type="submit"] {
 }
 #logli {
   margin-left: 140px;
+}
+.inx {
+  align-items: center;
+  text-align: center;
+}
+.inx h2 {
+  align-items: center;
+  background-color: #827ffe;
+}
+#inxreg {
+  margin-left: 20px;
+}
+#inxlog {
+  
+  margin-right: 20px;
+}
+#inxreg :hover{
+  background-color: black;
+  color: aliceblue;
 }
